hphp/hack/test/sound_dynamic/typing/prop.bad.php.exp
File "prop.bad.php", line 9, characters 15-16:
Class `E` cannot implement dynamic because property `x` cannot be assigned to dynamic (Typing[4402])
File "prop.bad.php", line 11, characters 22-23:
Class `E` cannot implement dynamic because property `z` does not have an enforceable type (Typing[4402])
